Tue Jun  8 20:53:12 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/NodeApplicationManager/ImplementationInfo.cpp:
	* DnC/NodeApplicationManager/ImplementationInfo.h:
	  Added these files.

	* DnC/NodeApplicationManager/NodeApplicationManager.mpc:
	  Changed MPC file reflect the changes.

	  Seems MPC doesn't support template very well for GCC. The
	  dependency is not set at all. I have no choice but to switch to
	  normal operator overlaoding.

Tue Jun  8 19:54:03 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/ciao/CCM_Core.mpc:
	* DnC/ciaoImplementation.h:
	  Removed this file also changed MPC file.

Tue Jun  8 14:15:31 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/DomainApplicationManager_Impl.cpp

          Tested it and it could split plan well and also contact
          NodeDaemon without problem.

          Fixed a bug caused by not using a reference.

Tue Jun  8 17:18:28 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/NodeApplication/NodeApplication.mpc:
	* DnC/ciao/CCM_Core.mpc:
	  Fixed another set of linking problem about export macros.

Tue Jun  8 14:15:31 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/RepositoryManager/RepositoryManager.mpc:

          Added missing library CIAO_Server.

Tue Jun  8 15:50:28 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
	  Added duplicate for one return value.

Tue Jun  8 15:00:30 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/Config_Handlers/TPD_Handler.h:
	* DnC/Config_Handlers/TPD_Handler.cpp:
	* DnC/RepositoryManager/RepositoryManager_Impl.cpp:

	Added TopLevelDescription handler.

Tue Jun  8 14:29:01 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/RepositoryManager/RepositoryManager_Impl.cpp:

          Made changes to read the top level package URL
          and create the PackageConfiguration IDL data structure.

Tue Jun  8 14:15:31 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/Config_Handlers/Utils.h:
